Arrumando alguns pequenos detalhes para maior compreensão do programa e fazendo um novo programa.

--- a/IdadeEmDias/index.html
+++ b/IdadeEmDias/index.html
@@ -6,7 +6,7 @@
 
         alert("Descubra quantos dias de vida você tem!")
         var ano = parseFloat(prompt("Digite sua idade em anos!"));
-        mes = parseFloat(prompt("Digite sua idade em meses!"));
+        mes = parseFloat(prompt("Digite sua idade em meses que ainda não completaram um ano!"));
         var dia = parseFloat(prompt("Digite sua idade em dias que ainda não completaram um mês!"));
         var anosDias = ano * 365
         var mesDias = mes * 30;
@@ -15,4 +15,6 @@
 
     </script>
 </head>
+<body>
+</body>
 </html>
