Criei um programa onde calcula e mostra os valores de x e y lendo alguns números, almé disso arrumei os links dos projetos.

--- a/PesoIdeal/index.html
+++ b/PesoIdeal/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Praticando </title>
+    <title> Massoterapia </title>
     <script>
 
-        <h1> Prática leva a perfeição </h1>
-
-        <p id = "demo"> Alterando o conteúdo </p>
-        <button type  = 
-
-        document.getElementById("demo).innerHTML = "Hello JavaScript";
+        prompt("Você sabe quem é a maior massoterapeuta do mundo?")
+        alert("Como assim você não sabe?")
+        alert("Você mora mesmo nesse mundo?")
+        alert("A melhor massoterapeuta se chama Hellen Zambaldi, a que promove o seu bem-estar")
+    
 
     </script>
 
