Criei um algorítimo que calcula a distancia entre dois pontos em um plano.

--- a/IdadeEmDias/index.html
+++ b/IdadeEmDias/index.html
@@ -25,7 +25,7 @@
         <button id="btExecutar" name="btExecutar" onclick="javascript:ExecutarDiasDeVida()">Executar</button>
 
         <br />
-        <label for="txtDiasDeVida">Dias de vida</label>
+        <label for="txtDiasDeVida">Parabéns seus dias de vida são</label> 
         <input id="txtDiasDeVida" readonly="readonly" name="txtDiasDeVida" type="number" />
 
 
