Mudei uma frase no html para maior compreeensao do usuário.

--- a/PesoIdeal/index.html
+++ b/PesoIdeal/index.html
@@ -6,7 +6,7 @@
 <body>
     <div>
         <h4>Opa, nesse algoritimo iremos descobrir o seu peso ideal.</h4>
-        Exercício:  Tendo como dados de entrada a altura e o sexo de uma pessoa(masculino e feminino), construa um algoritmo que calcule seu peso ideal, utilizando as seguintes formulas:
+        Exercicio:  Tendo como dados de entrada a altura e o sexo de uma pessoa(masculino e feminino), construa um algoritmo que calcule seu peso ideal, utilizando as seguintes formulas:
 
         <br />
         - para homens: (72.7*h)-58
@@ -24,7 +24,7 @@
         </select>
 
         <br />
-        <label for="txtAltura">Digite sua altura em metros e usando o ".". Siga o exemplo: 1.71</label>
+        <label for="txtAltura">Digite sua altura em centimetros, siga o exemplo: 171</label>
         <input id="txtAltura" name="txtAltura" type="number" />
 
         <button id="btCalcular" name="btCalcular" onclick="Calcular()">Calcular</button>
