Alterei uma letra para não ficar com bugs no algoritimo

--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -45,19 +45,19 @@
 
             if (operacao == "Soma") {
                 let operacaoSoma = numeroUm + numeroDois;
-                resultado.innerHTML = `O resultado é ${operacaoSoma}`;
+                resultado.innerHTML = `O resultado e ${operacaoSoma}`;
             }
             if (operacao == "Subtracao") {
                 let operacaoSubtracao = numeroUm - numeroDois;
-                resultado.innerHTML = `O resultado é ${operacaoSubtracao}`;
+                resultado.innerHTML = `O resultado e ${operacaoSubtracao}`;
             }
             if (operacao == "Multiplicacao") {
                 let operacaoMultiplicacao = numeroUm * numeroDois;
-                resultado.innerHTML = `O resultado é ${operacaoMultiplicacao}`;
+                resultado.innerHTML = `O resultado e ${operacaoMultiplicacao}`;
             }
             if (operacao == "Divisao") {
                 let operacaoDivisao = numeroUm / numeroDois;
-                resultado.innerHTML = ` resultado é ${operacaoDivisao}`;
+                resultado.innerHTML = ` resultado e ${operacaoDivisao}`;
             }
         }
 
