Estou criando um algorítimo com base em uma video aula do alura ensinando mais html e javascript. No troco fácil adiocionei o UTF-8 para corrigir os problemas de acentuação.

--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div>
-        <h4>Opa, nesse algoritimo iremos utilizar uma calculadora.</h4>
+        <h4>Oi, nesse algoritimo iremos utilizar uma calculadora.</h4>
 
         <label for="txtNumeroUm"> Digite um valor </label>
         <input id="txtNumeroUm" name="txtNumeroUm" type="number" />
