Finalizei o algorítimo do triângulo e fiz mais algumas atividades do alura

--- a/TesteHtml/index.html
+++ b/TesteHtml/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <title>Teste alura</title>
 </head>
 <body>
-    <h4>Olá, tudo bem?</h4>
-
-    Seria isso um programa?
-    <br />
-    Visite o meu repositório no GitHub clicando
-    <a href="https://github.com/Zambaldi21/Zambaldi21.github.io">aqui.</a>
-
 
     <script>
-        alert("Isso sim é um programa");
+        document.write("<h5>Olá ");
+        document.write("Bruno</h5>");
     </script>
 </body>
 </html>
