Aprendendo como utilizar o array nos algorítimos script. Encontrei dois erros no algorítimo do triangulo, um já foi solucionado e outro ainda vou revisar.

--- a/Triangulo/index.html
+++ b/Triangulo/index.html
@@ -65,7 +65,7 @@
             if (maiorValor < valorB + valorC) {
                 let altura = menorValor;
                 let base = maiorValor;
-                let area = (altura + base) / 2;
+                let area = (altura * base) / 2;
                 resultado.innerHTML = `<b>Esses valores formam um triângulo e o valor da sua area é ${area}.</b>`;
             }
             else {
