--- a/TesteHtml/index.html
+++ b/TesteHtml/index.html
@@ -9,6 +9,13 @@
     <script>
         document.write("<h5>Olá ");
         document.write("Bruno</h5>");
+        let arr = [1, 2, 3, 4, 5, 6,];
+        arr[1] = -7;
+        document.write(arr);
+        let arr2 = [10, 9, 8, 7,];
+        document.write(arr2.splice(0, 2));
+
+
     </script>
 </body>
 </html>
